# sherwood

./: .gitignore  .gitmodules  CLAUDE.md  DELEGATECALL-REFACTOR.md  HANDOFF.md  README.md  SIGNAL_ANALYSIS.md  TRADING_AGENT_STRATEGY.md  baseline-backtest-btc-20260413.txt  package-lock.json  skills-lock.json
.claude/: AUTOMATIONS.md  launch.json  settings.json
app/: .env.example  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
cli/: .env.example  package-lock.json  package.json  tsconfig.json  tsup.config.ts
contracts/: SECURITY_AUDIT.md
hermes-plugin/: .gitignore  BOOT.md  README.md  plugin.yaml  pyproject.toml
hermes-plugin/fixtures/: chain_agent_registered.json  chain_proposal_cancelled.json  chain_proposal_created.json  chain_proposal_executed.json  chain_proposal_settled.json  chain_vote_cast.json  session_check_output.json  vault_info_alpha.json  vault_info_beta.json  xmtp_approval_request.json  xmtp_message.json  xmtp_risk_alert.json  xmtp_strategy_proposal.json  xmtp_trade_signal.json
hermes-plugin/scripts/: refresh_skill_pack.sh
hermes-plugin/sherwood_monitor/: __init__.py  cli.py  config.py  cron_tick.py  exposure.py  handlers.py  hooks.py  risk.py  router.py  schemas.py  state_fetcher.py  supervisor.py  tools.py  xmtp_post.py
hermes-plugin/skills/sherwood-agent/skills/remember-settlement/: SKILL.md
hermes-plugin/tests/: conftest.py  test_config.py  test_cron_tick.py  test_exposure.py  test_handlers.py  test_hooks.py  test_register.py  test_router.py  test_supervisor.py  test_tools.py  test_xmtp_post.py
(+477 files in other folders)
