[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sherwood-monitor"
version = "0.2.0"
description = "Hermes plugin for Sherwood syndicate monitoring and auto-response"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sherwood" }]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[project.entry-points."hermes_agent.plugins"]
sherwood-monitor = "sherwood_monitor"

[tool.setuptools.packages.find]
where = ["."]
include = ["sherwood_monitor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
